website/websites/u64q/code/fannkuch.2.scala.log

Wed, 14 Jul 2010 17:35:16 GMT

MAKE:
mv fannkuch.scala-2.scala fannkuch.scala
/usr/local/src/scala-2.8.0.final/bin/scalac fannkuch.scala
fannkuch.scala:14: error: not found: type int
    var k: int = 0
           ^
fannkuch.scala:15: error: not found: type int
    var temp: int = 0
              ^
fannkuch.scala:16: error: not found: type int
    var first: int = 0
               ^
fannkuch.scala:17: error: not found: type int
    var flips: int = 0
               ^
fannkuch.scala:18: error: not found: type int
    var perm0: Array[int] = new Array[int](n)
                     ^
fannkuch.scala:18: error: not found: type int
    var perm0: Array[int] = new Array[int](n)
                                      ^
fannkuch.scala:19: error: not found: type int
    var perm: Array[int] = new Array[int](n)
                    ^
fannkuch.scala:19: error: not found: type int
    var perm: Array[int] = new Array[int](n)
                                     ^
fannkuch.scala:20: error: not found: type int
    var rot: Array[int] = new Array[int](n)
                   ^
fannkuch.scala:20: error: not found: type int
    var rot: Array[int] = new Array[int](n)
                                    ^
10 errors found
make: [fannkuch.scala-2.scala_run] Error 1 (ignored)
2.79s to complete and log all make actions

COMMAND LINE:
 /usr/local/src/jdk1.6.0_18/bin/java -server  -Xbootclasspath/a:/usr/local/src/scala-2.8.0.final/lib/scala-library.jar fannkuch 10

PROGRAM FAILED 


PROGRAM OUTPUT:

Exception in thread "main" java.lang.NoClassDefFoundError: fannkuch
Caused by: java.lang.ClassNotFoundException: fannkuch
	at java.net.URLClassLoader$1.run(URLClassLoader.java:202)
	at java.security.AccessController.doPrivileged(Native Method)
	at java.net.URLClassLoader.findClass(URLClassLoader.java:190)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:307)
	at sun.misc.Launcher$AppClassLoader.loadClass(Launcher.java:301)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:248)
Could not find the main class: fannkuch.  Program will exit.
